changing label font-weight to 500 and fixing dropdown in hebrew to be aligned right

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -845,3 +845,14 @@ $COLOR_19: #2a6496 !default;
     }
 }
 
+label {
+    font-weight: 500;
+}
+
+.rtl .dropdown-menu {
+    float: right;
+    position: inherit;
+}
+
+
+
